@@ -4,7 +4,7 @@ Title: gWidgets API for building toolkit-independent, interactive GUIs
 Author:  John Verzani. Based on  the iwidgets code of Simon Urbanek and suggestions by Simon Urbanek, Philippe Grosjean and Michael Lawrence
 Maintainer: John Verzani <jverzani@gmail.com>
 Depends: methods, utils
-Suggests: gWidgetsRGtk2, gWidgetstcltk
+Suggests: gWidgetsRGtk2, cairoDevice, gWidgetstcltk
 Description: gWidgets provides a toolkit-independent API for building interactive GUIs. Atleast one of the gWidgetsXXX packages, such as gWidgetstcltk, needs to be installed. Some icons are on loan from the scigraphica project http://scigraphica.sourceforge.net.
 License: GPL (>= 2)
 URL: https://r-forge.r-project.org/R/?group_id=761
